--- a/package.json
+++ b/package.json
@@ -352,5 +352,9 @@
       "resolved": "https://registry.npmjs.org/vary/-/vary-1.1.2.tgz",
       "integrity": "sha1-IpnwLG3tMNSllhsLn3RSShj2NPw="
     }
+    "engines": {
+      "node": "8.0.0",
+      "npm": "6.4.1"
+    }
   }
 }
