--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Meme generator",
   "main": "main.js",
-  "dependencies": {},
+  "dependencies": {
+      "express": "latest"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
