first deploy take seven

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Meme generator",
   "main": "main.js",
   "dependencies": {
-      "express": "latest"
+      "express": "^4.16.4"
   },
   "devDependencies": {},
   "scripts": {
