--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express-validator": "^5.3.0",
     "pg": "^7.6.1",
     "pg-promise": "^8.5.2",
-    "sha3": "^2.0.0"
+    "sha3": "^2.0.0",
+    "validator": "^10.9.0"
   },
   "devDependencies": {},
   "scripts": {
