--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
+    "flash": "^1.1.0",
     "method-override": "^3.0.0",
     "pg": "^7.6.1",
     "pg-promise": "^8.5.3",
