--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "method-override": "^3.0.0",
     "pg": "^7.6.1",
     "pg-promise": "^8.5.3",
+    "popups": "^1.1.3",
     "sha3": "^2.0.0",
     "validator": "^10.9.0"
   },
