--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Meme generator",
   "main": "main.js",
   "dependencies": {
+    "alert-node": "^1.2.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
