install bcrypt in case we want to use it for password hash stuff

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "alert-node": "^1.2.3",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
