--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "sha3": "^2.0.0",
     "validator": "^10.9.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "scripts": {
+      "test": "./node_modules/karma/bin/karma start karma.conf.js"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.5"
   },
   "author": "Not Monday",
   "license": "GPL-3.0"
